--- a/src/app/plan/plan.component.scss
+++ b/src/app/plan/plan.component.scss
@@ -1,3 +1,5 @@
+@import "../../styles/layout/responsive.scss";
+
 h3 {
   color: var(--cool-gray);
   font-weight: 400;
@@ -9,6 +11,14 @@ ul {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+
+  @include desktop {
+    flex-direction: row;
+
+    li {
+      flex: 1;
+    }
+  }
 }
 
 button {
@@ -21,6 +31,10 @@ button {
   align-items: flex-start;
   background: transparent;
   cursor: pointer;
+
+  @include desktop {
+    flex-direction: column;
+  }
 
   img {
     width: 3rem;
@@ -35,11 +49,19 @@ button {
       font-size: 1.1rem;
       font-weight: 700;
       color: var(--marine-blue);
+
+      @include desktop {
+        font-size: 1rem;
+      }
     }
 
     span {
       color: var(--cool-gray);
       font-weight: 500;
+
+      @include desktop {
+        font-size: 0.8rem;
+      }
 
       &:nth-of-type(2) {
         color: var(--marine-blue);
